Building html structure
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
   <title>Frontend Mentor | Calculator app</title>
   <link rel="stylesheet" href="dist/css/main.css"/>
 
-  <style>
-    
-  </style>
 </head>
 <body>
   <main class="calculator">
     <div class="calculator-container">
-      <header class="calculator-theme"></header>
+      <header class="header calculator-theme">
+        <div class="header-container">
+          <h4>calc</h4>
+          <div id="toggle-container">
+            <div id="theme-title">
+              <label class="theme-number">1</label>
+              <label class="theme-number">2</label>
+              <label class="theme-number">3</label>
+            </div>
+            <div id="toggle">
+              
+            </div>
+          </div> <!-- .toggle-container -->
+        </div>
+      </header>
       <section class="calculator-screen"></section>
       <section class="calculator-keypad"></section>
     </div><!-- .calculator-container -->
