--- a/index.html
+++ b/index.html
@@ -41,9 +41,26 @@
       <section class="display-container">
         <input type="text" id="display" class="calculator__screen" value="0" disabled />
       </section> <!-- .display-container -->
-      
-      <section class="calculator-keypad">
 
+      <section id="keys" class="calculator-keypad">
+        <button type="button" value="7" class="number-key">7</button>
+        <button type="button" value="8" class="number-key">8</button>
+        <button type="button" value="9" class="number-key">9</button>
+        <button type="button" value="delete" class="function-key delete">DEL</button>
+        <button type="button" value="4" class="number-key">4</button>
+        <button type="button" value="5" class="number-key">5</button>
+        <button type="button" value="6" class="number-key">6</button>
+        <button type="button" value="+" class="number-key operator">+</button>
+        <button type="button" value="1" class="number-key">1</button>
+        <button type="button" value="2" class="number-key">2</button>
+        <button type="button" value="3" class="number-key">3</button>
+        <button type="button" value="-" class="number-key operator">-</button>
+        <button type="button" value="." class="function-key decimal">.</button>
+        <button type="button" value="0" class="number-key">0</button>
+        <button type="button" value="/" class="number-key operator">/</button>
+        <button type="button" value="*" class="number-key operator">*</button>
+        <button type="button" value="reset" class="function-key reset span-2">RESET</button>
+        <button type="button" value="=" class="function-key operator span-2">=</button>
       </section>
     </div><!-- .calculator-container -->
   </main>
