--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="dist/css/main.css"/>
 
 </head>
-<body>
+<body class="theme1">
   <main class="calculator">
     <div class="calculator__container">
       <header class="header">
@@ -24,14 +24,14 @@
               <label class="theme-number">3</label>
             </div>
             <div id="toggle__switch" class="toggle__switch">
-              <label for="toggle">
-                <input name="toggle" type="radio" aria-label="theme1-toggler" id="theme1Toggle" class="theme-toggle" checked/>
+              <label for="theme1">
+                <input name="theme" type="radio" value="1" aria-label="theme1-toggler" id="theme1" class="theme-toggle" checked/>
               </label>
-              <label for="toggle">
-                <input name="toggle" type="radio" aria-label="theme2-toggler" id="theme2Toggle" class="theme-toggle"/>
+              <label for="theme2">
+                <input name="theme" type="radio" value="2" aria-label="theme2" id="theme2Toggle" class="theme-toggle"/>
               </label>
-              <label for="toggle">
-                <input name="toggle" type="radio" aria-label="theme3-toggler" id="theme3Toggle" class="theme-toggle"/>
+              <label for="theme3">
+                <input name="theme" type="radio" value="3" aria-label="theme3-toggler" id="theme3" class="theme-toggle"/>
               </label>
             </div>
           </div> <!-- .toggle-container -->
