--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <input name="theme" type="radio" value="1" aria-label="theme1-toggler" id="theme1" class="theme-toggle" checked/>
               </label>
               <label for="theme2">
-                <input name="theme" type="radio" value="2" aria-label="theme2" id="theme2Toggle" class="theme-toggle"/>
+                <input name="theme" type="radio" value="2" aria-label="theme2" id="theme2" class="theme-toggle"/>
               </label>
               <label for="theme3">
                 <input name="theme" type="radio" value="3" aria-label="theme3-toggler" id="theme3" class="theme-toggle"/>
