Updates: completed calculator js
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       </header>
 
       <section class="display-container">
-        <input type="text" id="display" class="calculator__screen" value="0" disabled />
+        <input type="text" id="screen" class="calculator__screen" value="" disabled />
       </section> <!-- .display-container -->
 
-      <section id="keys" class="calculator-keypad">
+      <section id="calc-keys" class="calculator-keypad">
         <button type="button" value="7" class="number-key">7</button>
         <button type="button" value="8" class="number-key">8</button>
         <button type="button" value="9" class="number-key">9</button>
