--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 </head>
 <body class="theme1">
-  <main class="calculator">
+  <main class="main">
     <div class="calculator__container">
       <header class="header">
-        <div class="header__container">
-          <h4>calc</h4>
+        <div class="calculator__header">
+          <h4 class="calculator-title">calc</h4>
           <div id="toggle__container">
             <p class="toggle-title">theme</p>
             <div id="theme-numbers">
@@ -38,8 +38,8 @@
         </div><!-- .header__container -->
       </header>
 
-      <section class="display-container">
-        <input type="text" id="screen" class="calculator__screen" value="" disabled />
+      <section class="display__container">
+        <input type="text" id="screen" class="calculator-screen" value="" disabled />
       </section> <!-- .display-container -->
 
       <section id="calc-keys" class="calculator-keypad">
@@ -60,7 +60,7 @@
         <button type="button" value="/" class="number-key operator">/</button>
         <button type="button" value="*" class="number-key operator">*</button>
         <button type="button" value="reset" class="function-key reset span-2">RESET</button>
-        <button type="button" value="=" class="function-key operator span-2">=</button>
+        <button type="button" value="=" class="function-key equal-sign span-2">=</button>
       </section>
     </div><!-- .calculator-container -->
   </main>
