--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <button type="button" value="7" class="number-key">7</button>
         <button type="button" value="8" class="number-key">8</button>
         <button type="button" value="9" class="number-key">9</button>
-        <button type="button" value="delete" class="function-key delete">del</button>
+        <button type="button" value="delete" class="function-key number-key delete">del</button>
         <button type="button" value="4" class="number-key">4</button>
         <button type="button" value="5" class="number-key">5</button>
         <button type="button" value="6" class="number-key">6</button>
@@ -55,12 +55,12 @@
         <button type="button" value="2" class="number-key">2</button>
         <button type="button" value="3" class="number-key">3</button>
         <button type="button" value="-" class="number-key operator">-</button>
-        <button type="button" value="." class="function-key decimal">&middot;</button>
+        <button type="button" value="&sdot;" class="function-key number-key decimal">&sdot;</button>
         <button type="button" value="0" class="number-key">0</button>
         <button type="button" value="/" class="number-key operator">/</button>
         <button type="button" value="*" class="number-key operator">*</button>
-        <button type="button" value="reset" class="function-key reset">reset</button>
-        <button type="button" value="=" class="function-key equal-sign">=</button>
+        <button type="button" value="reset" class="function-key number-key reset">reset</button>
+        <button type="button" value="=" class="function-key number-key equal-sign">=</button>
       </section>
     </div><!-- .calculator-container -->
   </main>
