--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
           <h4 class="calculator-title">calc</h4>
           <div id="toggle__container">
             <p class="toggle-title">theme</p>
-            <div id="theme-numbers">
-              <label class="theme-number">1</label>
-              <label class="theme-number">2</label>
-              <label class="theme-number">3</label>
-            </div>
-            <div id="toggle__switch" class="toggle__switch">
-              <label for="theme1">
-                <input name="theme" type="radio" value="1" aria-label="theme1-toggler" id="theme1" class="theme-toggle" checked/>
-              </label>
-              <label for="theme2">
-                <input name="theme" type="radio" value="2" aria-label="theme2" id="theme2" class="theme-toggle"/>
-              </label>
-              <label for="theme3">
-                <input name="theme" type="radio" value="3" aria-label="theme3-toggler" id="theme3" class="theme-toggle"/>
-              </label>
+            <div class="toggle-box">
+              <div id="theme-numbers" class="numbers">
+                <label class="theme-number">1</label>
+                <label class="theme-number">2</label>
+                <label class="theme-number">3</label>
+              </div>
+              <div id="toggle__switch" class="toggle-switch">
+                <label for="theme1">
+                  <input name="theme" type="radio" value="1" aria-label="theme1-toggler" id="theme1" class="theme-toggle" checked/>
+                </label>
+                <label for="theme2">
+                  <input name="theme" type="radio" value="2" aria-label="theme2" id="theme2" class="theme-toggle"/>
+                </label>
+                <label for="theme3">
+                  <input name="theme" type="radio" value="3" aria-label="theme3-toggler" id="theme3" class="theme-toggle"/>
+                </label>
+              </div>
             </div>
           </div> <!-- .toggle-container -->
         </div><!-- .header__container -->
