--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   </main>
   <footer> 
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/TLanetteRose">T.Lanette</a>.
+      Challenge by &nbsp;<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by &nbsp;<a href="https://github.com/TLanetteRose">T.Lanette</a>.
     </div>
   </footer>
 
