Updates: Adjusing header size
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body class="theme1">
   <main class="main">
     <div class="calculator__container">
-      <header class="header">
-        <div class="calculator__header">
+      <header class="calculator__header">
           <h4 class="calculator-title">calc</h4>
           <div id="toggle__container">
             <span class="toggle-title">theme</span>
@@ -37,7 +36,6 @@
               <div class="toggle"></div>
             </div><!-- .toggle-switch -->
           </div> <!-- .toggle-container -->
-        </div><!-- .header__container -->
       </header>
 
       <input type="text" id="screen" class="calculator-screen" value="" disabled />
