Updated: Added hover and active states
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button type="button" value="2" class="number-key">2</button>
         <button type="button" value="3" class="number-key">3</button>
         <button type="button" value="-" class="number-key operator">-</button>
-        <button type="button" value="&sdot;" class="function-key number-key decimal">&sdot;</button>
+        <button type="button" value="&sdot;" class="number-key decimal">&sdot;</button>
         <button type="button" value="0" class="number-key">0</button>
         <button type="button" value="/" class="number-key operator">/</button>
         <button type="button" value="*" class="number-key operator">*</button>
