--- a/index.html
+++ b/index.html
@@ -37,28 +37,31 @@
             </div><!-- .toggle-switch -->
           </div> <!-- .toggle-container -->
       </header>
-
-      <input type="text" id="screen" class="calculator-screen" value="" disabled />
+      <div class="output calculator-screen">
+        <div data-previous-operand class="previous-operand"></div>
+        <div data-current-operand class="current-operand"></div>
+      </div>
+     <!-- <input type="text" id="screen" class="calculator-screen" value="" disabled />-->
 
       <section id="calc-keys" class="calculator-keypad">
-        <button type="button" value="7" class="number-key">7</button>
-        <button type="button" value="8" class="number-key">8</button>
-        <button type="button" value="9" class="number-key">9</button>
-        <button type="button" value="delete" class="function-key number-key delete">del</button>
-        <button type="button" value="4" class="number-key">4</button>
-        <button type="button" value="5" class="number-key">5</button>
-        <button type="button" value="6" class="number-key">6</button>
-        <button type="button" value="+" class="number-key operator">+</button>
-        <button type="button" value="1" class="number-key">1</button>
-        <button type="button" value="2" class="number-key">2</button>
-        <button type="button" value="3" class="number-key">3</button>
-        <button type="button" value="-" class="number-key operator">-</button>
-        <button type="button" value="&sdot;" class="number-key decimal">&sdot;</button>
-        <button type="button" value="0" class="number-key">0</button>
-        <button type="button" value="/" class="number-key operator">/</button>
-        <button type="button" value="*" class="number-key operator">*</button>
-        <button type="button" value="reset" class="function-key number-key reset">reset</button>
-        <button type="button" value="=" class="function-key number-key equal-sign">=</button>
+        <button data-number type="button" value="7" class="number-key">7</button>
+        <button data-number type="button" value="8" class="number-key">8</button>
+        <button data-number type="button" value="9" class="number-key">9</button>
+        <button data-delete type="button" value="delete" class="function-key number-key delete">del</button>
+        <button data-number type="button" value="4" class="number-key">4</button>
+        <button data-number type="button" value="5" class="number-key">5</button>
+        <button data-number type="button" value="6" class="number-key">6</button>
+        <button data-operation type="button" value="+" class="number-key operator">+</button>
+        <button data-number type="button" value="1" class="number-key">1</button>
+        <button data-number type="button" value="2" class="number-key">2</button>
+        <button data-number type="button" value="3" class="number-key">3</button>
+        <button data-operation type="button" value="-" class="number-key operator">-</button>
+        <button data-number type="button" value="&sdot;" class="number-key decimal">&sdot;</button>
+        <button data-number type="button" value="0" class="number-key">0</button>
+        <button data-operation type="button" value="/" class="number-key operator">/</button>
+        <button data-operation type="button" value="*" class="number-key operator">*</button>
+        <button data-reset type="button" value="reset" class="function-key number-key reset">reset</button>
+        <button data-equals type="button" value="=" class="function-key number-key equal-sign">=</button>
       </section>
     </div><!-- .calculator-container -->
   </main>
@@ -69,7 +72,7 @@
     </div>
   </footer>
 
-  <script src="js/calculator.js"></script>
+  <script src="js/calculatorup.js"></script>
   <script src="js/theme.js"></script>
 </body>
 </html>
