Updates: working on screen display
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
   </footer>
 
-  <script src="js/calculatorup.js"></script>
+  <script src="/js/calculatorup.js"></script>
   <script src="js/theme.js"></script>
 </body>
 </html>
