--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           </div> <!-- .toggle-container -->
       </header>
       <div class="output">
-        <div data-previous-operand id="nums" class="previous-operand"></div>
-        <div data-current-operand class="current-operand"></div>
+        <div data-previous-operand class="previous-operand"></div>
+        <div data-current-operand id="nums" class="current-operand"></div>
       </div>
      <!-- 
        <div class="calculator-screen">
