Updates: completed update display
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <button data-number type="button" value="2" class="number-key">2</button>
         <button data-number type="button" value="3" class="number-key">3</button>
         <button data-subtract type="button" value="-" class="number-key operator">-</button>
-        <button data-number type="button" value="&sdot;" class="number-key decimal">&sdot;</button>
+        <button data-number type="button" value="&sdot;" class="number-key decimal">.</button>
         <button data-number type="button" value="0" class="number-key">0</button>
         <button data-divide type="button" value="/" class="number-key operator">/</button>
         <button data-multiply type="button" value="*" class="number-key operator">*</button>
