--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   </footer>
 
-  <script src="/js/calculatorup.js"></script>
+  <script src="/js/calculatorfinaljs"></script>
   <script src="js/theme.js"></script>
 </body>
 </html>
