--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <footer> 
     <div class="attribution">
       Challenge by &nbsp;<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by &nbsp;<a href="https://github.com/TLanetteRose">T.Lanette</a>.
+    Coded by &nbsp;<a href="https://github.com/tlanettepollard">T.Lanette</a>.
     </div>
   </footer>
 
